--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
+        <h1>Hi, I am <span class="about__name">Sachin Beejady Teja.</span></h1>
         <h2 class="about__role">A Front end Developer.</h2>
         <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
@@ -214,8 +214,6 @@
       <a
         href="https://github.com/rajshekhar26/cleanfolio-minimal"
         class="link footer__link"
-      >
-        Created By Raj Shekhar
       </a>
     </footer>
 
