--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Sachin Beejady Teja.</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h1>Hi, I am <span class="about__name"
+          >Sachin Beejady Teja.</span></h1>
+        <h2 class="about__role">Data Analyst.</h2>
         <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
           Vitae libero perferendis reprehenderit optio veritatis Accusantium at
@@ -79,7 +80,7 @@
           </a>
 
           <a
-            href="https://linkedin.com/in/rajshekhar26"
+            href="https://linkedin.com/in/sachinbt"
             aria-label="linkedin"
             class="link link--icon"
           >
