--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link"
-          >RS.</a
+        <a href="https://sachinbeejady.github.io/" class="link"
+          >SBT.</a
         >
       </h3>
 
