--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name"
-          >Sachin Beejady Teja.</span></h1>
+          >Sachin Beejady.</span></h1>
         <h2 class="about__role">Data Analyst.</h2>
         <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
@@ -67,12 +67,12 @@
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a href="https://drive.google.com/file/d/18bpzbvy0yb9CgGE3ZgDNioUldOdWejs8/view?usp=sharing">
             <span class="btn btn--outline">Resume</span>
           </a>
 
           <a
-            href="https://github.com/rajshekhar26"
+            href="https://github.com/sachinbeejady"
             aria-label="github"
             class="link link--icon"
           >
