--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="about center">
         <h1>Hi, I am <span class="about__name"
           >Sachin Beejady.</span></h1>
-        <h2 class="about__role">Data Analyst.</h2>
+        <h2 class="about__role">Business Analyst.</h2>
         <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
           Vitae libero perferendis reprehenderit optio veritatis Accusantium at
@@ -205,7 +205,7 @@
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
+        <a href="mailto:sbeejady@buffalo.edu">
           <span class="btn btn--outline">Email me</span>
         </a>
       </section>
