--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
           >Sachin Beejady.</span></h1>
         <h2 class="about__role">Business Analyst.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          Seasoned Data/Business Analyst, currently pursuing a Master's in Management Information Systems, 
+          specializing in leveraging technical skills to provide data-driven insights.
+          Proficient in Python, SQL, and visualization tools (Tableau,Streamlit) with a strong foundation 
+          in predictive analytics and database management. Recognized for driving process improvements and 
+          facilitating cross-functional team collaboration with product and engineering. 
+          A proactive problem-solver eager to tackle complex business challenges with data. 
         </p>
 
         <div class="about__contact center">
@@ -187,18 +188,18 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">SQL</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">Postgre</li>
+          <li class="skills__list-item btn btn--plain">Redshift</li>
+          <li class="skills__list-item btn btn--plain">Excel</li>
+          <li class="skills__list-item btn btn--plain">Tableau</li>
+          <li class="skills__list-item btn btn--plain">Streamlit</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">Snowflake</li>
+          <li class="skills__list-item btn btn--plain">Regression</li>
+          <li class="skills__list-item btn btn--plain">Statistics</li>
+          <li class="skills__list-item btn btn--plain">Splunk</li>
         </ul>
       </section>
 
