--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
           >Sachin Beejady.</span></h1>
         <h2 class="about__role">Business Analyst.</h2>
         <p class="about__desc">
-          Seasoned Data/Business Analyst, currently pursuing a Master's in Management Information Systems, 
-          specializing in leveraging technical skills to provide data-driven insights.
-          Proficient in Python, SQL, and visualization tools (Tableau,Streamlit) with a strong foundation 
-          in predictive analytics and database management. Recognized for driving process improvements and 
-          facilitating cross-functional team collaboration with product and engineering. 
-          A proactive problem-solver eager to tackle complex business challenges with data. 
+          Seasoned Data/Business Analyst, currently pursuing a Master's in Management Information Systems, specializing 
+          in leveraging technical skills to provide data-driven insights. Proficient in Python, SQL, and visualization 
+          tools (Tableau,Streamlit) with a strong foundation in predictive analytics and database management. Recognized 
+          for driving process improvements and facilitating cross-functional team collaboration with product and 
+          engineering. A proactive problem-solver eager to tackle complex business challenges with data. 
         </p>
 
         <div class="about__contact center">
